--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Long Haul
-description: Long Form Jekyll theme built with SASS / COMPASS / SUSY
+title: Nela Smrzova
+description: Blog about testing and stuff
 
-url: http://brianmaierjr.github.com/long-haul
+url: http://nelasmrzova.cz
 baseurl: ""
 paginate_path: "blog/page:num/"
 permalink: blog/:title/
@@ -12,7 +12,7 @@ gems: [jekyll-paginate]
 paginate: 5
 
 navigation:
- - title: Home
+ - title: Posts
    url: /index.html
  - title: About
    url: /about
@@ -20,9 +20,10 @@ navigation:
    url: /contact
 
 social:
-   github: brianmaierjr
-   twitter: brianmaierjr
-   facebook: brianmaierjr
-   email: brimaidesigns@gmail.com
+   github: neliczka
+   twitter: neliczka
+   instagram: neliczka
+   #facebook: brianmaierjr
+   email: n.nelis.s@gmail.com
 
-google_analytics: "UA-58263416-1"
+#google_analytics: "UA-58263416-1"
